# dual-boot-helper

./: CMakeLists.txt  README.md  main.cpp
include/: grub_cfg.hpp
src/: CMakeLists.txt  grub_cfg.cpp
